# cybersec-soc-env

./: .env.example  .gitignore  BLOG.md  CyberSec_SOC_Training.ipynb  README.md  RESEARCH.md  add_endpoints.py  agent_memory.json  analyze.py  checkmodel.py  collect_data.py  create_dockerfile.py  final_summary.py  grader.py  inference.py  llm_run_1.txt  llm_run_2.txt  llm_run_3.txt  rule_based_20ep.json  topology_analysis.json  topology_analysis.py  topology_experiments.json  train_and_save.py  upload.py  uploadblog.py  uploadpngs.py  validate.sh  verify.py
cybersec_soc_env/: CyberSec_SOC_OpenEnv_Training_Notebook(1).ipynb  Dockerfile  Dockerfile.txt  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  write_readme.py
cybersec_soc_env/server/: Dockerfile  __init__.py  app.py  battle_dashboard.html  gradio_dashboard.py  requirements.txt  soc_environment.py  training_dashboard.html
trained_model/: README.md  train_cybersec.py
